@@ -24,6 +24,7 @@
  */
 
 #include "config.h"
+#include "Frame.h"
 #include "FrameWin.h"
 
 #include "EditorClient.h"
